# BugReportMultimedia

./: CMakeLists.txt  main.cpp
.github/workflows/: build-test-install.yml
multilib/: CMakeLists.txt
multilib/include/: CPPCamera.hpp
multilib/qml/: QMLCamera.qml
multilib/src/: CPPCamera.cpp
qml/: window.qml
